# SAT-BO

./: .autopush.sh  .gitignore  README.md
benchmark_verificationRule-SAT-Encoding/: v100-c258-1.cnf  v103-c179-1.cnf  v114-c266-1.cnf  v129-c300-1.cnf  v148-c279-1.cnf  v166-c312-1.cnf  v167-c323-1.cnf  v184-c351-1.cnf  v193-c393-1.cnf  v206-c518-1.cnf  v243-c548-1.cnf  v252-c463-1.cnf  v256-c572-1.cnf  v265-c631-1.cnf  v269-c618-1.cnf  v284-c632-1.cnf  v321-c662-1.cnf  v339-c892-1.cnf  v68-c121-1.cnf  v69-c135-1.cnf  v91-c218-1.cnf  v94-c215-1.cnf
code/: getData.py  main.py  makeVirtual.py  setLevy.py  setSAT.py
code/SAT/: CMakeLists.txt
code/SAT/include/: SAT.h  node.h
code/SAT/src/sat/: DPLL.cpp
code/SAT/src/src/: Main.cpp  sol.cpp  solver.cpp
code/turbo/: utils.py
log/log/: v100-c258-1.log.sol  v102-c228-1.log.sol  v103-c179-1.log.sol  v114-c266-1.log.sol  v118-c246-1.log.sol  v129-c300-1.log.sol  v1341-c2632-1.log.sol  v148-c279-1.log.sol  v166-c312-1.log.sol  v167-c323-1.log.sol  v179-c334-1.log.sol  v184-c351-1.log.sol  v187-c399-1.log.sol  v193-c393-1.log.sol  v206-c518-1.log.sol  v224-c523-1.log.sol  v243-c548-1.log.sol  v252-c463-1.log.sol  v256-c572-1.log.sol  v265-c631-1.log.sol  v269-c618-1.log.sol  v284-c632-1.log.sol  v321-c662-1.log.sol  v339-c892-1.log.sol  v62-c124-1.log.sol  v68-c121-1.log.sol  v69-c135-1.log.sol  v75-c286-1.log.sol  v91-c218-1.log.sol  v94-c215-1.log.sol
log/solve/: v100-c258-1.sol  v102-c228-1.sol  v103-c179-1.sol  v114-c266-1.sol  v118-c246-1.sol  v129-c300-1.sol  v1341-c2632-1.sol  v148-c279-1.sol  (+22 more)
tmp/: build.sh
(+104 files in other folders)
